# bucket-graph-spprc

./: .gitignore  .gitmodules  CITATION.cff  CLAUDE.md  CMakeLists.txt  Makefile  PLAN.md  README.md
.claude/: .last-review  settings.json
.github/workflows/: ci.yml
benchmarks/: README.md  bgspprc.csv  build_comparison_pathwyse.py  check_consistency.py  check_optimal.sh  compare_mono_bidir.sh  compare_pathwyse.sh  comparison.csv  comparison_pathwyse.csv  comparison_rcspp.csv  convert_to_pathwyse.py  fetch_instances.sh  pathwyse.csv  pull_algo_runtimes.csv  regen_all_modes.sh  run_ablation.sh  run_benchmarks.sh  run_comparison.sh  run_pathwyse.sh  test_convert_to_pathwyse.py
benchmarks/ablation/: 01_bucket_steps.sh  02_bidirectional.sh  03_jump_arcs.sh  04_label_state.sh  05_stage_progression.sh  06_dominance.sh  07_completion_bounds.sh  08_instance_structure.sh  09_simd.sh  10_refinement.sh  common.sh
benchmarks/instances/roberti/: optimal-ng16.csv  optimal-ng24.csv  optimal-ng8.csv
benchmarks/instances/spprclib/: optimal-ng16.csv  optimal-ng24.csv  optimal-ng8.csv
benchmarks/patches/: pathwyse-pure-ng.patch  pathwyse-skip-terminals-in-buildng.patch
cli/: instance_io.h  main.cpp  version.h.in
cmake/: generate_version.cmake
examples/: CMakeLists.txt  basic_spprc.cpp  custom_resource.cpp  cvrp_pricing.cpp
include/bgspprc/: arc.h  bgspprc.h  bucket.h  bucket_graph.h  executor.h  executor_thread.h  label.h  problem_view.h  r1c.h  resource.h  solver.h  types.h
include/bgspprc/resources/: cumulative_cost.h  ng_path.h  pickup_delivery.h  standard.h
scripts/: bench_vs_pathwyse.sh  convert_sppcc_to_pathwyse.py  convert_vrp_to_pathwyse.py  fetch_instances.sh
tests/: bench_run.cpp  bench_vs_pathwyse.cpp  instance_io.h  run_spprclib_all.cpp  test_benchmarks.cpp  test_bucket_graph.cpp  test_cli.sh  test_executor.cpp  test_instance_io.cpp  test_resource.cpp  test_small_instance.cpp  test_stress.cpp
tests/fixtures/: tiny.graph  tiny.sppcc  tiny.vrp
